# mini_source_separation

./: .gitignore  .gitmodules  default.yaml  environment.yaml  evaluate.py  inference.py  pyproject.toml  requirements.txt  run_autoencoder.sh  run_roformer.sh  run_roformer_t.sh  stable_audio_tools  train.py  train2.py  train2_accelerate_bf16.py  train_accelerate.py  train_accelerate_bf16.py
configs/: small1.yaml  small1dmm_a_group.yaml  small1dmm_group.yaml  small_1d.yaml  small_1d_1_window.yaml  small_1d_1a1_window.yaml  small_1d_1a_window.yaml  small_1d_1b_window.yaml  small_1d_1c_window.yaml  small_1d_1d_window.yaml  small_1d_1e_window.yaml  small_1d_1f_window.yaml  small_1d_1g_window.yaml  small_1d_2_window.yaml  small_1d_2a_window.yaml  small_1d_2b_window.yaml  small_1d_2c_window.yaml  small_1d_2d_window.yaml  small_1d_2e_window.yaml  small_1d_2f_window.yaml  small_1d_2g_window.yaml  small_1d_3_window.yaml  small_1d_3a_window.yaml  small_1d_3b_window.yaml  small_1d_4_window.yaml  small_1d_4a_window.yaml  small_1d_4b_window.yaml  small_1d_4c_window.yaml  small_1d_5_window.yaml  small_1d_window.yaml  small_2.yaml  small_2a.yaml  small_2a2.yaml  small_2a3.yaml  small_2a4.yaml  small_2b.yaml  small_3.yaml  small_4.yaml  small_4a.yaml  small_6.yaml  (+16 more)
configs/dataset_configs/: musdb18hq.yaml
data/: dataset.py  musdb18hq.py
data_deprecated/: utils.py
lora_diffusion/: lora.py
models/: bs_roformer15_cnnunet.py  bs_roformer15_fullunet.py  bs_roformer15_layerscale.py  bs_roformer18.py  bs_roformer19.py  bs_roformer20.py  bs_roformer21.py  bs_roformer22.py  bs_roformer23.py  bs_roformer_unet.py  bs_roformer_unet2.py  factory.py
models/bs_roformer/: bs_roformer15.py  bs_roformer_mixffn.py
mss/: losses.py
mss/data/: dataset.py
mss/datasets/: augmentations.py
mss/inference/: utils.py
mss/models/: bandsplit_3.py  bandsplit_fixmel.py  bsroformer04a4.py  bsroformer_1.py  bsroformer_2.py  bsroformer_2a.py  bsroformer_2b.py  bsroformer_3.py  bsroformer_4.py  bsroformer_5.py  bsroformer_6.py  bsroformer_7.py  factory.py  flex_attention.py  mmbsroformer.py  mmtransformer1d.py  mmtransformer1d_1.py  mmtransformer1d_1a.py  mmtransformer1d_1b.py  mmtransformer1d_1c.py  mmtransformer1d_2_.py  mmtransformer1d_3.py  mmtransformer1d_4.py  mmtransformer1d_5.py  rope.py  transformer.py  unet.py  utils.py
scripts/: run_autoencoder_c512c128.sh  run_autoencoder_c512c128_v2.sh  run_autoencoder_f2048c128_v2.sh  run_autoencoder_f512c128_v2.sh  run_autoencoder_f512c128_v3.sh  run_dcae_f512c128.sh  run_diffusion_mss.sh  run_roformer.sh  run_roformer_t.sh
training/: diffusion_mss.py  factory.py  mss.py  utils.py
(+47 files in other folders)
