[project]
name = "mss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.1.0",
    "accelerate>=1.1.1",
    "aeiou>=0.0.20",
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.4.3",
    "aiohttp>=3.11.8",
    "aiosignal>=1.3.1",
    "annotated-types>=0.7.0",
    "antlr4-python3-runtime>=4.13.2",
    "anyio>=4.6.2.post1",
    "argbind>=0.3.9",
    "argparse>=1.4.0",
    "attrs>=24.2.0",
    "audiomentations>=0.37.0",
    "audioread>=3.0.1",
    "auraloss>=0.4.0",
    "bitsandbytes>=0.44.1",
    "bleach>=6.2.0",
    "bokeh>=3.6.1",
    "braceexpand>=0.1.7",
    "build>=1.2.2.post1",
    "clean-fid>=0.1.35",
    "click>=8.1.7",
    "clip-anytorch>=2.6.0",
    "colorama>=0.4.6",
    "colorcet>=3.1.0",
    "configparser>=7.1.0",
    "contourpy>=1.3.1",
    "cycler>=0.12.1",
    "dctorch>=0.1.2",
    "descript-audio-codec>=1.0.0",
    "descript-audiotools>=0.7.2",
    "diffusers>=0.31.0",
    "docker-pycreds>=0.4.0",
    "docstring-parser>=0.16",
    "einops>=0.8.0",
    "einops-exts>=0.0.4",
    "einx>=0.3.0",
    "ema-pytorch>=0.7.6",
    "fastapi>=0.115.5",
    "fastcore>=1.7.20",
    "ffmpeg-python>=0.2.0",
    "ffmpy>=0.4.0",
    "fire>=0.7.0",
    "flatbuffers>=24.3.25",
    "flatten-dict>=0.4.2",
    "fonttools>=4.55.0",
    "frozendict>=2.4.6",
    "frozenlist>=1.5.0",
    "fsspec>=2024.10.0",
    "ftfy>=6.3.1",
    "future>=1.0.0",
    "gin-config>=0.5.0",
    "gitdb>=4.0.11",
    "gitpython>=3.1.43",
    "gradio>=3.18.0",
    "gradio-client>=1.5.0",
    "grpcio>=1.68.0",
    "h11>=0.14.0",
    "holoviews>=1.20.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.0",
    "huggingface-hub>=0.26.3",
    "hydra-core>=0.11.3",
    "icecream>=2.1.3",
    "imageio>=2.36.1",
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "joblib>=1.4.2",
    "jsonmerge>=1.9.2",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2024.10.1",
    "julius>=0.2.7",
    "k-diffusion>=0.1.1.post1",
    "kiwisolver>=1.4.7",
    "kornia>=0.7.4",
    "kornia-rs>=0.1.7",
    "lazy-loader>=0.4",
    "librosa>=0.9.2",
    "lightning-utilities>=0.11.9",
    "linkify-it-py>=2.0.3",
    "llvmlite>=0.43.0",
    "markdown>=3.7",
    "markdown-it-py>=2.2.0",
    "markdown2>=2.5.1",
    "markupsafe>=3.0.2",
    "matplotlib>=3.9.2",
    "mdit-py-plugins>=0.3.3",
    "mdurl>=0.1.2",
    "mediapipe>=0.10.11",
    "museval>=0.4.1",
    "prefigure>=0.0.10",
    "rotary-embedding-torch>=0.8.6",
]

[tool.setuptools.packages.find]
include = ["mss"]
